--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon shortcut icon" href="./icon.png">
+    <link rel="icon shortcut icon" type="x-icon" href="./icon.png">
     <title>Night-Mode-Extension</title>
 </head>
     <style>
@@ -15,7 +15,7 @@
     </style>
     </head>
     <body>
-        <h4>Read Mode Extension</h4>
+        <h4>Night Mode Extension</h4>
         <button id="toggleReadMode">Toggle Read Mode</button>
        <script src="popup.js"></script>
     </body>
